--- a/index.html
+++ b/index.html
@@ -382,19 +382,21 @@
 
         <section class="call__to__action">
             <div class="call__card container shadow">
-                <form class="call__left" action="">
-                    <h1>Have a Project to
-                        Discuss?</h1>
-                    <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, laborum eum debitis
-                        minus!
-                    </h4>
-                    <input type="email" name="Email" id="email-call" placeholder="Email">
-                </form>
+                <div class="call__left">
+                    <form class="call__left" action="">
+                        <h1>Have a Project to
+                            Discuss?</h1>
+                        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, laborum eum debitis
+                            minus!
+                        </h4>
+                        <input type="email" name="Email" id="email-call" placeholder="Email">
+                </div>
 
                 <div class="call__right">
-                    <button class="shadow">Let's Go!
+                    <button id="lets-go" class="shadow">Let's Go!
                     </button>
                 </div>
+                </form>
             </div>
         </section>
 
