--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 
         <h3 class="intro text-shadow"> <span class="gradient">Six Figure</span> Questions</h3>
 
-        <section class="faq">
+        <!-- <section class="faq">
             <div class=" accordion container">
 
                 <div class="accordion__item">
@@ -378,7 +378,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <section class="call__to__action">
             <div class="call__card container shadow">
