--- a/index.html
+++ b/index.html
@@ -254,6 +254,8 @@
 
         <h3 class="intro text-shadow"> <span class="gradient">Six Figure</span> Questions</h3>
 
+        <p>sdfjnkds</p>
+
         <!-- <section class="faq">
             <div class=" accordion container">
 
