--- a/index.html
+++ b/index.html
@@ -254,9 +254,8 @@
 
         <h3 class="intro text-shadow"> <span class="gradient">Six Figure</span> Questions</h3>
 
-        <p>sdfjnkds</p>
 
-        <!-- <section class="faq">
+        <section class="faq">
             <div class=" accordion container">
 
                 <div class="accordion__item">
@@ -380,9 +379,9 @@
                     </div>
                 </div>
             </div>
-        </section> -->
+        </section>
 
-        <section class="call__to__action">
+        <!-- <section class="call__to__action">
             <div class="call__card container shadow">
                 <div class="call__left">
                     <form class="call__left" action="">
@@ -400,7 +399,7 @@
                 </div>
                 </form>
             </div>
-        </section>
+        </section> -->
 
         <section class="footer">
 
