--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </section>
 
 
-    <section class="third">
+    <!-- <section class="third">
         <div class="swiper mySwiper">
             <div class="swiper-wrapper">
                 <div class="swiper-slide shadow">
@@ -118,7 +118,7 @@
 
             </div>
         </div>
-    </section>
+    </section> -->
 
     <div class="background-change">
 
