--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </ul>
             </div>
             <div class="nav__right">
-                <a href="#" class="btn-outline text-shadow" id="contact-button">
+                <a href="#" class="btn-outline" id="contact-button">
                     <div class="btn__text">
                         <h5 href="#">Contact</h5>
                     </div>
@@ -51,14 +51,13 @@
 
         <div class="second-wrapper container ">
 
-            <p class="huge shadow-text">Say hello to the <br> next generation of <br> website <span
-                    class="auto-type"></span>
+            <p class="huge">Say hello to the <br> next generation of <br> website <span class="auto-type"></span>
             </p>
-            <h4 class="second__content light shadow-text">Consequatur ut qui. Cupiditate natus dolores sit. Nesciunt
+            <h4 class="second__content light">Consequatur ut qui. Cupiditate natus dolores sit. Nesciunt
                 aperiam rerum veniam explicabo ut.
                 Modi illo voluptates debitis magnam placeat. Delectus rerum recusandae ut aut veritatis.</h4>
 
-            <a href="#" class="btn-gradient hvr-grow shadow">
+            <a href="#" class="btn-gradient hvr-grow">
                 <div class="btn__text">
                     <h5 href="#">Portfolio</h5>
                 </div>
@@ -73,7 +72,7 @@
     <section class="third">
         <div class="swiper mySwiper">
             <div class="swiper-wrapper">
-                <div class="swiper-slide shadow">
+                <div class="swiper-slide">
                     <div class="card__info">
                         <h4 id="card__first-name">Tyler Mox</h4>
                         <p>Product Manager</p>
@@ -123,7 +122,7 @@
     <div class="background-change">
 
 
-        <h3 class="intro text-shadow"> <span class="gradient">Six Figure</span> Services</h3>
+        <h3 class="intro"> <span class="gradient">Six Figure</span> Services</h3>
 
         <section class="fourth">
             <div class="fourth__grid container">
@@ -252,7 +251,7 @@
             </div>
         </section>
 
-        <h3 class="intro text-shadow"> <span class="gradient">Six Figure</span> Questions</h3>
+        <h3 class="intro"> <span class="gradient">Six Figure</span> Questions</h3>
 
         <section class="faq">
             <div class=" accordion container">
@@ -381,7 +380,7 @@
         </section>
 
         <section class="call__to__action">
-            <div class="call__card container shadow">
+            <div class="call__card container">
                 <div class="call__left">
                     <form class="call__left" action="">
                         <h1>Have a Project to
@@ -393,7 +392,7 @@
                 </div>
 
                 <div class="call__right">
-                    <button id="lets-go" class="shadow">Let's Go!
+                    <button id="lets-go">Let's Go!
                     </button>
                 </div>
                 </form>
