--- a/index.html
+++ b/index.html
@@ -472,9 +472,9 @@
             effect: "cards",
             grabCursor: true,
             loop: true,
-            autoplay: {
-                delay: 2000,
-            },
+            // autoplay: {
+            //     delay: 2000,
+            // },
         });
     </script>
 
