--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </section>
 
 
-    <section class="third">
+    <!-- <section class="third">
         <div class="swiper mySwiper">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
@@ -117,7 +117,7 @@
 
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- <div class="background-change"> -->
 
