--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <title>Six Figure Labs</title>
     <link rel="stylesheet" href="styles.css">
     <script src="main.js"" defer></script>
@@ -69,7 +71,7 @@
     </section>
 
 
-    <!-- <section class="third">
+    <section class="third">
         <div class="swiper mySwiper">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
@@ -117,7 +119,7 @@
 
             </div>
         </div>
-    </section> -->
+    </section>
 
     <!-- <div class="background-change"> -->
 
