--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
         </div>
     </section>
 
-    <!-- <section class="call__to__action">
+    <section class="call__to__action">
         <div class="call__card container">
             <div class="call__left">
                 <form class="call__left" action="">
@@ -399,7 +399,7 @@
             </div>
             </form>
         </div>
-    </section> -->
+    </section>
 
     <section class="footer">
 
