--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-    <section class=" header">
+    <section class="header">
 
         <div class="nav container">
             <div class="nav__left">
@@ -31,7 +31,7 @@
                 </ul>
             </div>
             <div class="nav__right">
-                <a href="#" class="btn-outline" id="contact-button">
+                <a href="#" class="btn-outline shadow" id="contact-button">
                     <div class="btn__text">
                         <h5 href="#">Contact</h5>
                     </div>
@@ -53,13 +53,14 @@
 
         <div class="second-wrapper container ">
 
-            <p class="huge">Say hello to the <br> next generation of <br> website <span class="auto-type"></span>
+            <p class="huge text-shadow">Say hello to the <br> next generation of <br> website <span
+                    class="auto-type"></span>
             </p>
-            <h4 class="second__content light">Consequatur ut qui. Cupiditate natus dolores sit. Nesciunt
+            <h4 class="second__content light text-shadow">Consequatur ut qui. Cupiditate natus dolores sit. Nesciunt
                 aperiam rerum veniam explicabo ut.
                 Modi illo voluptates debitis magnam placeat. Delectus rerum recusandae ut aut veritatis.</h4>
 
-            <a href="#" class="btn-gradient hvr-grow">
+            <a href="#" class="btn-gradient hvr-grow shadow">
                 <div class="btn__text">
                     <h5 href="#">Portfolio</h5>
                 </div>
@@ -74,7 +75,7 @@
     <section class="third">
         <div class="swiper mySwiper">
             <div class="swiper-wrapper">
-                <div class="swiper-slide">
+                <div class="swiper-slide shadow">
                     <div class="card__info">
                         <h4 id="card__first-name">Tyler Mox</h4>
                         <p>Product Manager</p>
@@ -258,7 +259,7 @@
     <section class="faq">
         <div class=" accordion container">
 
-            <div class="accordion__item">
+            <div class="accordion__item shadow">
                 <div class="accordion__item__header">
                     <h4>How long does development take?</h4>
                     <div class="accordion__icon">
@@ -278,7 +279,7 @@
                     </div>
                 </div>
             </div>
-            <div class="accordion__item">
+            <div class="accordion__item shadow">
                 <div class="accordion__item__header">
                     <h4>How long does development take?</h4>
                     <div class="accordion__icon">
@@ -298,7 +299,7 @@
                     </div>
                 </div>
             </div>
-            <div class="accordion__item">
+            <div class="accordion__item shadow">
                 <div class="accordion__item__header">
                     <h4>How long does development take?</h4>
                     <div class="accordion__icon">
@@ -318,7 +319,7 @@
                     </div>
                 </div>
             </div>
-            <div class="accordion__item">
+            <div class="accordion__item shadow">
                 <div class="accordion__item__header">
                     <h4>How long does development take?</h4>
                     <div class="accordion__icon">
@@ -338,7 +339,7 @@
                     </div>
                 </div>
             </div>
-            <div class="accordion__item">
+            <div class="accordion__item shadow">
                 <div class="accordion__item__header">
                     <h4>How long does development take?</h4>
                     <div class="accordion__icon">
@@ -358,7 +359,7 @@
                     </div>
                 </div>
             </div>
-            <div class="accordion__item">
+            <div class="accordion__item shadow">
                 <div class="accordion__item__header">
                     <h4>How long does development take?</h4>
                     <div class="accordion__icon">
@@ -382,7 +383,7 @@
     </section>
 
     <section class="call__to__action">
-        <div class="call__card container">
+        <div class="call__card container shadow">
             <div class="call__left">
                 <form class="call__left" action="">
                     <h1>Have a Project to
@@ -394,7 +395,7 @@
             </div>
 
             <div class="call__right">
-                <button id="lets-go">Let's Go!
+                <button id="lets-go" class="shadow">Let's Go!
                 </button>
             </div>
             </form>
