--- a/index.html
+++ b/index.html
@@ -464,7 +464,8 @@
    
    <script>
         AOS.init({
-            duration: 1000
+            duration: 1000,
+            delay: 600
         });
       </script>
     <script>
