--- a/index.html
+++ b/index.html
@@ -465,7 +465,8 @@
    <script>
         AOS.init({
             duration: 1000,
-            delay: 600
+            delay: 600,
+            once: true
         });
       </script>
     <script>
