--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <title>Six Figure Labs</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" type="image/png" href="SixFavicon.png" />
     <script src="main.js"" defer></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link
@@ -126,7 +127,7 @@
     <div class="background-change">
 
 
-    <h3 class="intro container" data-aos="fade-up"> <span class="gradient">Six Figure</span> Services</h3>
+    <h3 class="intro container"> <span class="gradient">Six Figure</span> Services</h3>
 
     <section class="fourth">
         <div class="fourth__grid container">
@@ -172,6 +173,12 @@
                             quidem libero obcaecati consequuntur tempora voluptatem architecto cumque dolores quae
                         </h5>
                     </div>
+                    <a href="#" class="btn-gradient" id="learn-more-service">
+                        <div class="btn__text">
+                            <h5 href="#">Learn More</h5>
+                        </div>
+                        <img class="btn__icon" src="rightArrow.svg" alt="">
+                    </a>
                 </div>
             </div>
 
@@ -247,7 +254,7 @@
                     aperiam quo sint.</h5>
                 <a href="#" class="btn-gradient" id="learn-more">
                     <div class="btn__text">
-                        <h5 href="#">LearnMore</h5>
+                        <h5 href="#">Learn More</h5>
                     </div>
                     <img class="btn__icon" src="rightArrow.svg" alt="">
                 </a>
@@ -255,7 +262,8 @@
         </div>
     </section>
 
-    <h3 class="intro container" data-aos="fade-up"> <span class="gradient">Six Figure</span> Questions</h3>
+    <h3 class="intro container"> <span class="gradient">Six Figure</span> Questions</h3>
+
 
     <section class="faq" data-aos="fade-up">
         <div class=" accordion container">
