--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     <div class="background-change">
 
 
-    <h3 class="intro container"> <span class="gradient">Six Figure</span> Services</h3>
+    <h3 class="intro container" id = "six-services"> <span class="gradient">Six Figure</span> Services</h3>
 
     <section class="fourth">
         <div class="fourth__grid container">
@@ -492,9 +492,9 @@
             effect: "cards",
             grabCursor: true,
             loop: true,
-            // autoplay: {
-            //     delay: 2000,
-            // },
+            autoplay: {
+                delay: 2000,
+            },
         });
     </script>
 
