--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
                     <h4 id="phrase">Propel your business to new heights
                         with <span class="gradient">6 Figure Labs!</span></h4>
 
-                    <h5 id="copyright">Copyright © 2021 - 2022 SixFigureLabs. </h5>
+                    <h5 id="copyright">Copyright ©2021-2022 SixFigureLabs. </h5>
 
 
                 </div>
