--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <title>Six Figure Labs</title>
+    <meta property="og:title" content="Six Figure Labs: Web Development / Web Design" />
+    <meta property="og:description" content="Gain more business traction with a little help from Six Figure Labs"/>
+    <meta property="og:image" content="openGraphBg.png" />
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" type="image/png" href="SixFavicon.png" />
     <script src="main.js"" defer></script>
@@ -173,12 +175,12 @@
                             quidem libero obcaecati consequuntur tempora voluptatem architecto cumque dolores quae
                         </h5>
                     </div>
-                    <a href="#" class="btn-gradient" id="learn-more-service">
-                        <div class="btn__text">
-                            <h5 href="#">Learn More</h5>
-                        </div>
-                        <img class="btn__icon" src="rightArrow.svg" alt="">
-                    </a>
+                                    <a href="#" class="btn-gradient" id="learn-more-service">
+                    <div class="btn__text">
+                        <h5 href="#">Learn More</h5>
+                    </div>
+                    <img class="btn__icon" src="rightArrow.svg" alt="">
+                </a>
                 </div>
             </div>
 
