--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Six Figure Labs</title>
-    <meta property="og:title" content="Six Figure Labs: Web Development / Web Design" />
+    <meta property="og:title" content="Six Figure Labs: Web Development & Web Design" />
     <meta property="og:description" content="Gain more business traction with a little help from Six Figure Labs"/>
     <meta property="og:image" content="openGraphBg.png" />
     <link rel="stylesheet" href="styles.css">
