--- a/index.html
+++ b/index.html
@@ -21,23 +21,23 @@
 <body>
 
     <section class="header">
-
+        <div class="group">
         <div class="nav container">
             <div class="nav__left">
-                <div class="nav__logo">
-                    <img src="6FLMainLogo.svg" alt="">
-                </div>
+                <a href = "index.html" class="nav__logo">
+                    <img id = "logo" src="" alt="">
+                </a>
                 <ul class="nav__items">
-                    <li><a id="home" href="#">Home</a></li>
-                    <li><a id="services" href="#">Services</a></li>
-                    <li><a id="about" href="#">About</a></li>
-                    <li><a id="our-work" href="#">Our Work</a></li>
+                    <li><a id="home" href="./index.html">Home</a></li>
+                    <li><a id="services" href="./services.html">Services</a></li>
+                    <li><a id="about" href="./about.html">About</a></li>
+                    <li><a id="our-work" href="./our-work.html">Our Work</a></li>
                 </ul>
             </div>
             <div class="nav__right">
                 <a href="#" class="btn-outline text-shadow" id="contact-button">
                     <div class="btn__text">
-                        <h5 href="#">Contact</h5>
+                        <h5 href="./contact.html">Contact</h5>
                     </div>
                     <img class="btn__icon" src="chevronDouble.svg" alt="">
                 </a>
@@ -49,11 +49,21 @@
                 </button>
             </div>
         </div>
+        <div class="nav mobile-nav">
+
+            <a id="home" href="./index.html">Home</a>
+            <a id="services" href="./services.html">Services</a>
+            <a id="about" href="./about.html">About</a>
+            <a id="our-work" href="./our-work.html">Our Work</a>
+            <a id="contact" href="./contact.html">Contact</a>
+
+        </div>
+    </div>
     </section>
 
 
 
-    <section class="second" data-aos="fade-up">
+    <section class="second" data-aos="fade-right">
 
         <div class="second-wrapper container ">
 
@@ -438,10 +448,11 @@
                     <div class="sitemap">
                         <h4>Overview</h4>
                         <ul class="permalinks">
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="about.html">Services</a></li>
-                            <li><a href="courses.html">About</a></li>
-                            <li><a href="contact.html">Our Work</a></li>
+                            <li><a href="./index.html">Home</a></li>
+                            <li><a href="./services.html">Services</a></li>
+                            <li><a href="./about.html">About</a></li>
+                            <li><a href="./our-work.html">Our Work</a></li>
+                            <li><a href="./contact.html">Contact</a></li>
                         </ul>
                     </div>
                     <div class="legal">
