--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <meta property="og:image" content="openGraphBg.png" />
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" type="image/png" href="SixFavicon.png" />
-    <script src="main.js"" defer></script>
+    <script src="main.js" defer></script>
+    <script src="nav.js" defer></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link
   rel=" stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
@@ -187,8 +188,9 @@
                     </div>
                                     <a href="#" class="btn-gradient" id="learn-more-service">
                     <div class="btn__text">
-                        <h5 href="#">Learn More</h5>
+                        <h5 href="#">Learn</h5>
                     </div>
+                    <h5> More </h5>
                     <img class="btn__icon" src="rightArrow.svg" alt="">
                 </a>
                 </div>
@@ -266,8 +268,9 @@
                     aperiam quo sint.</h5>
                 <a href="#" class="btn-gradient" id="learn-more">
                     <div class="btn__text">
-                        <h5 href="#">Learn More</h5>
+                        <h5 href="#">Learn</h5>
                     </div>
+                    <h5> More </h5>
                     <img class="btn__icon" src="rightArrow.svg" alt="">
                 </a>
             </div>
