--- a/index.html
+++ b/index.html
@@ -186,9 +186,9 @@
                             quidem libero obcaecati consequuntur tempora voluptatem architecto cumque dolores quae
                         </h5>
                     </div>
-                                    <a href="#" class="btn-gradient" id="learn-more-service">
+                                    <a href="./services.html" class="btn-gradient" id="learn-more-service">
                     <div class="btn__text">
-                        <h5 href="#">Learn</h5>
+                        <h5>Learn</h5>
                     </div>
                     <h5> More </h5>
                     <img class="btn__icon" src="rightArrow.svg" alt="">
@@ -266,7 +266,7 @@
                     autem, quod sunt dolorum suscipit nemo illum ducimus impedit? Sed, dolore! Asperiores nemo
                     consequatur
                     aperiam quo sint.</h5>
-                <a href="#" class="btn-gradient" id="learn-more">
+                <a href="./services.html" class="btn-gradient" id="learn-more">
                     <div class="btn__text">
                         <h5 href="#">Learn</h5>
                     </div>
