--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
         <div class="nav mobile-nav">
 
             <a id="home mobile" href="./index.html">Home</a>
-            <a id="services" href="./services.html">Services</a>
+            <a id="services mobile" href="./services.html">Services</a>
             <a id="about" href="./about.html">About</a>
             <a id="our-work" href="./our-work.html">Our Work</a>
             <a id="contact" href="./contact.html">Contact</a>
