--- a/services.html
+++ b/services.html
@@ -36,7 +36,7 @@
                 </ul>
             </div>
             <div class="nav__right">
-                <a href="#" class="btn-outline text-shadow" id="contact-button">
+                <a href="./contact.html" class="btn-outline text-shadow" id="contact-button">
                     <div class="btn__text">
                         <h5 href="./contact.html">Contact</h5>
                     </div>
