--- a/contact.html
+++ b/contact.html
@@ -76,16 +76,16 @@
 
         <div class="left__contact">
             <div class="left__contact__item">
-                <div class="left__contact__img">
+                <div class="left__contact__img shadow">
                 <img src="mail.svg" alt="">
             </div>
-                <a href = "mailto:hello@sixfigurelabs.com">hello@sixfigurelabs.com</a>
+                <a href = "mailto:hello@sixfigurelabs.com" class = "text-shadow">hello@sixfigurelabs.com</a>
             </div>
             <div class="left__contact__item">
-                <div class="left__contact__img">
+                <div class="left__contact__img shadow">
                 <img src="phone.svg" alt="">
             </div>
-                <a a href="tel:9545607452">954-560-7452</a>
+                <a a href="tel:9545607452" class = "text-shadow">954-560-7452</a>
             </div>
         </div>
     </div>
@@ -93,25 +93,25 @@
     <div class="form__left" data-aos="fade-left">
         <div class="form__box shadow">
         <div class="form__heading">
-            <h3>Request a Quote</h3>
+            <h3 class = "text-shadow">Request a Quote</h3>
         </div>
 
         <form action="" class="contact__form">
-        <p class = "title">Name</p>
+        <p class = "title text-shadow">Name</p>
             <div class="name__box">
-        <input type="text" name="Name" id="form__first-name" placeholder="First Name" required>
-        <input type="text" name="Name" id="form__last-name" placeholder="Last Name">
+        <input type="text" name="Name" id="form__first-name" placeholder="First Name" class = "shadow" class = "shadow"required>
+        <input type="text" name="Name" id="form__last-name" placeholder="Last Name" class = "shadow">
     </div>
 
-    <p class = "title">Email</p>
+    <p class = "title text-shadow">Email</p>
 
     <div class="email__box">
-        <input type="email" name="Email" id="form__email" placeholder ="Email" required>
+        <input type="email" name="Email" id="form__email" placeholder ="Email" class = "shadow" required>
     </div>
     
-    <p class = "title">Contact Number</p>
+    <p class = "title text-shadow">Contact Number</p>
     <div class="number__box">
-        <input type="tel" name="Phone" id="form__phone" placeholder = "Phone Number">
+        <input type="tel" name="Phone" id="form__phone" placeholder = "Phone Number" class = "shadow">
     </div>
 
     <button class="btn-gradient shadow">
