--- a/contact.html
+++ b/contact.html
@@ -90,7 +90,7 @@
         </div>
     </div>
 
-    <div class="form__left" data-aos="fade-left">
+    <div class="form__left">
         <div class="form__box shadow">
         <div class="form__heading">
             <h3 class = "text-shadow">Request a Quote</h3>
