--- a/about.html
+++ b/about.html
@@ -164,21 +164,6 @@
         <h2 class="intro text-shadow container">Meet the <span class="gradient">Founders</span></h2>
         <div class="founder__wrapper container">
 
-            <div class="founder" data-aos="fade-up">
-
-                <div class="founder__info">
-                    <h3 id="founder__first-name">Tyler Mox</h3>
-                    <p class = "light">Computer Science, BS</p>
-                </div>
-                <div class="founder__img">
-                    <img src="TempImage.png" alt="">
-
-                </div>
-                <div class="founder__paragraph light">
-                    <h4 class ="light"><span class="gradient founder-quote">“</span>When I was released from rehab for my pornography addiction, I knew I needed a change. That's when I founded Six Figure Labs.<span class="gradient founder-quote">”</span></h4>
-                </div>
-        </div>
-
         <div class="founder" data-aos="fade-up">
 
             <div class="founder__info">
@@ -186,16 +171,35 @@
                 <p class = "light">Computer Science, BS</p>
             </div>
             <div class="founder__img">
-                <img src="TempImage.png" alt="">
+                <img src="FounderPic.jpg" alt="">
 
             </div>
             <div class="founder__paragraph light">
-                <h4 class ="light"><span class="gradient founder-quote">“</span>When I was released from rehab for my pornography addiction, I knew I needed a change. That's when I founded Six Figure Labs.<span class="gradient founder-quote">”</span></h4>
+                <h4 class ="light"><span class="gradient founder-quote">“</span>Owl sweaters inside her luggage, you gotta love it.
+                    Damn, this shit could go on a tape,
+                    bitches lovin' my drive, I never give it a break.<span class="gradient founder-quote">”</span></h4>
             </div>
 
 
 
         </div>
+
+        <div class="founder" data-aos="fade-up">
+
+            <div class="founder__info">
+                <h3 id="founder__first-name">Tyler Mox</h3>
+                <p class = "light">Computer Science, BS</p>
+            </div>
+            <div class="founder__img">
+                <img src="TylerFounder.jpg" alt="">
+
+            </div>
+            <div class="founder__paragraph light">
+                <h4 class ="light"><span class="gradient founder-quote">“</span>Give these ****** the look, the verse, and even the hook.
+                    That's why every song sound like Drake featurin' Drake,
+                    Straight, Y pree? Why is it always me?<span class="gradient founder-quote">”</span></h4>
+            </div>
+    </div>
 
 
 
