--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 aperiam rerum veniam explicabo ut.
                 Modi illo voluptates debitis magnam placeat. Delectus rerum recusandae ut aut veritatis.</h4>
 
-            <a href="#" class="btn-gradient hvr-grow shadow">
+            <a href="./our-work.html" class="btn-gradient hvr-grow shadow">
                 <div class="btn__text">
                     <h5 href="#">Portfolio</h5>
                 </div>
